--- a/index.html
+++ b/index.html
@@ -101,12 +101,13 @@
 
     <!-- Kendini Tanıtma Bölümü -->
     <section class="about">
-        <h2>About Me</h2>
-        <img src="profile.jpg" alt="Muhammet Mustafa HASTAOĞLUGİL">
-        <p>
-            Hello! I'm Muhammet Mustafa HASTAOĞLUGİL, a passionate computer engineer specializing in software development. I love building innovative projects and exploring new technologies.
-        </p>
-    </section>
+    <h2>About Me</h2>
+    <!-- Profil resmi yüklemediysen bu satırı tamamen silebilirsin -->
+    <img src="profile.jpg" alt="Profile Picture" style="display: none;">
+    <p>
+        Hello! I'm Muhammet Mustafa HASTAOĞLUGİL, a passionate computer engineer specializing in software development. I love building innovative projects and exploring new technologies.
+    </p>
+</section>
 
     <!-- Projeler Bölümü -->
     <section class="projects">
