--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             border-radius: 8px;
         }
 
-        .project-item video {
+        .project-item video, .project-item iframe {
             width: 100%;
             height: auto;
             border-radius: 5px;
@@ -134,6 +134,13 @@
                 <source src="project3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+        </div>
+
+        <!-- YouTube Videosunu Ekleyelim -->
+        <div class="project-item">
+            <h3>My Tasty Empire</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/KYoJAuQ7C14" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
     </section>
