--- a/index.html
+++ b/index.html
@@ -66,18 +66,35 @@
 
         .project-item {
             display: inline-block;
-            width: 300px;
+            width: 400px;
             margin: 20px;
             background-color: white;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
+            vertical-align: top;
         }
 
         .project-item video, .project-item iframe {
             width: 100%;
             height: auto;
             border-radius: 5px;
+        }
+
+        .project-links {
+            margin-top: 15px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .project-links a {
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        .project-links img {
+            width: 40px;
+            height: 40px;
         }
 
         footer {
@@ -118,6 +135,15 @@
                 <source src="project1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <!-- Linkler -->
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.example.android">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/app/id0000000000">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
         </div>
         
         <div class="project-item">
@@ -126,21 +152,30 @@
                 <source src="project2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <!-- Linkler -->
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.example.android">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/app/id0000000000">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
         </div>
         
-        <div class="project-item">
-            <h3>Project 3</h3>
-            <video controls>
-                <source src="project3.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-
-        <!-- YouTube Videosunu Ekleyelim -->
         <div class="project-item">
             <h3>My Tasty Empire</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/KYoJAuQ7C14" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- Linkler -->
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.example.android">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/app/id0000000000">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
         </div>
 
     </section>
