--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <a href="https://play.google.com/store/apps/details?id=com.example.android">
                     <img src="android-icon.png" alt="Android">
                 </a>
-                <a href="https://apps.apple.com/app/id0000000000">
+                <a href="https://apps.apple.com/us/app/my-tasty-empire/id6502766369">
                     <img src="ios-icon.png" alt="iOS">
                 </a>
             </div>
