--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             display: inline-block;
             width: 400px;
             margin: 20px;
-            background-color: #333;  /* Başlangıçta koyu arka plan */
+            background-color: #1C2833;  /* Başlangıçta koyu arka plan */
             padding: 20px;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
             border-radius: 15px;
