--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             padding: 0;
             box-sizing: border-box;
             background-image: url('background-image.jpg'); /* Arka plan resmi */
-            background-size: cover; /* Resmi kapla */
-            background-position: center; /* Ortala */
-            background-attachment: fixed; /* Parallax efekti */
-            background-repeat: no-repeat; /* Tekrar etme */
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
         }
 
         /* Header için Gradient ve Yazı Tipi */
@@ -164,28 +164,9 @@
             margin: 0 5px;
         }
 
-        /* Yüklenme Animasyonu */
-        .loader {
-            border: 8px solid #f3f3f3;
-            border-radius: 50%;
-            border-top: 8px solid #3498db;
-            width: 60px;
-            height: 60px;
-            animation: spin 2s linear infinite;
-            margin: 100px auto;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
     </style>
 </head>
 <body>
-
-    <!-- Yüklenme Animasyonu -->
-    <div class="loader" id="loader"></div>
 
     <!-- Header Bölümü -->
     <header>
@@ -254,4 +235,14 @@
     <div class="social-icons">
         <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
         <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></
+        <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+
+    <!-- Footer Bölümü -->
+    <footer>
+        <p>&copy; 2024 Muhammet Mustafa HASTAOĞLUGİL. All Rights Reserved.</p>
+        <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+    </footer>
+
+</body>
+</html>
