--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             display: inline-block;
             width: 400px;
             margin: 20px;
-            background-color: #3397E1;
+            background-color: #82E4D0;
             padding: 20px;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
             border-radius: 15px;
