--- a/index.html
+++ b/index.html
@@ -123,10 +123,11 @@
         }
 
         .project-links img {
-            width: 60px;
-            height: 60px;
+            width: 100px;  
+            height: 100px; 
             object-fit: contain;
-        }
+            margin: 10px; 
+}
 
         /* Sosyal Medya İkonları - Font Awesome */
         .social-icons {
