--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <h3>My Tasty Empire</h3>
             <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="project-links">
-                <a href="https://play.google.com/store/apps/details?id=com.example.android">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyTastyEmpire&hl=en">
                     <img src="android-icon.png" alt="Android">
                 </a>
                 <a href="https://apps.apple.com/us/app/my-tasty-empire/id6502766369">
