--- a/index.html
+++ b/index.html
@@ -122,16 +122,18 @@
             margin: 0 10px;
         }
 
+        /* Proje İkonları */
         .project-links img {
             width: 120px;  
             height: 120px; 
             object-fit: contain;
             margin: 10px;
             transition: all 0.3s ease-in-out;  /* Smooth geçiş efekti */
+            border-radius: 10px;  /* Yuvarlak köşeler */
         }
 
         .project-links img:hover {
-            transform: scale(1.1);  /* Hover'da hafif büyütme */
+            transform: scale(1.1);  /* Hover'da sadece ikonu büyüt */
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);  /* Daha belirgin gölge */
             cursor: pointer;  /* Fare imlecini el simgesine çevirir */
             filter: brightness(1.2);  /* Hafif parlaklık efekti */
