--- a/index.html
+++ b/index.html
@@ -123,20 +123,22 @@
         }
 
         /* Proje İkonları */
+        /* Proje İkonları */
         .project-links img {
-            width: 120px;  
-            height: 120px; 
+            width: 120px;
+            height: 120px;
             object-fit: contain;
             margin: 10px;
-            transition: all 0.3s ease-in-out;  /* Smooth geçiş efekti */
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;  /* Sadece transform ve shadow için smooth geçiş */
             border-radius: 10px;  /* Yuvarlak köşeler */
+            background-color: transparent;  /* Arka planı tamamen saydam yap */    
         }
 
         .project-links img:hover {
             transform: scale(1.1);  /* Hover'da sadece ikonu büyüt */
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);  /* Daha belirgin gölge */
             cursor: pointer;  /* Fare imlecini el simgesine çevirir */
-            filter: brightness(1.2);  /* Hafif parlaklık efekti */
+    /* filter özelliğini kaldırdık, arka plan değişikliği yapmayacak */
         }
 
         /* Sosyal Medya İkonları - Font Awesome */
