--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         .project-links img:hover {
             transform: scale(1.1);  /* Hover'da sadece ikonu büyüt */
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);  /* Daha belirgin gölge */
+            /*box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);  /* Daha belirgin gölge */
             cursor: pointer;  /* Fare imlecini el simgesine çevirir */
             background-color: transparent; 
     /* filter özelliğini kaldırdık, arka plan değişikliği yapmayacak */
