--- a/index.html
+++ b/index.html
@@ -117,30 +117,30 @@
             justify-content: center;
         }
 
-        .project-links a {
-            text-decoration: none;
-            margin: 0 10px;
-        }
-
         /* Proje İkonları */
-        /* Proje İkonları */
-        .project-links img {
-            width: 120px;
-            height: 120px;
-            object-fit: contain;
-            margin: 10px;
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;  /* Sadece transform ve shadow için smooth geçiş */
-            border-radius: 10px;  /* Yuvarlak köşeler */
-            background-color: transparent;  /* Arka planı tamamen saydam yap */    
-        }
+.project-links a {
+    display: inline-block;
+    width: 120px;  /* Sabit genişlik */
+    height: 120px; /* Sabit yükseklik */
+    background-color: transparent;  /* Çerçeve arka planı şeffaf */
+    text-align: center;  /* İkonu ortalayacağız */
+    vertical-align: middle;
+    line-height: 120px;  /* Yükseklik kadar line-height vererek dikey ortalama yapıyoruz */
+    border-radius: 10px;  /* Yuvarlak köşeler */
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;  /* Smooth geçiş efekti */
+}
 
-        .project-links img:hover {
-            transform: scale(1.1);  /* Hover'da sadece ikonu büyüt */
-            /*box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);  /* Daha belirgin gölge */
-            cursor: pointer;  /* Fare imlecini el simgesine çevirir */
-            background-color: transparent; 
-    /* filter özelliğini kaldırdık, arka plan değişikliği yapmayacak */
-        }
+.project-links img {
+    max-width: 80px;  /* İkon genişliğini max 80px yapıyoruz */
+    max-height: 80px; /* İkon yüksekliğini max 80px yapıyoruz */
+    vertical-align: middle;  /* İkonu ortalıyoruz */
+}
+
+.project-links a:hover {
+    transform: scale(1.1);  /* Hover sırasında çerçeveyi büyütüyoruz */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);  /* Gölge efekti */
+    cursor: pointer;  /* Fare imlecini el simgesine çevirir */
+}
 
         /* Sosyal Medya İkonları - Font Awesome */
         .social-icons {
