--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     line-height: 120px;  /* Yükseklik kadar line-height vererek dikey ortalama yapıyoruz */
     border-radius: 10px;  /* Yuvarlak köşeler */
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;  /* Smooth geçiş efekti */
+     margin: 20px;
 }
 
 .project-links img {
