--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     transform: scale(1.1);  /* Hover sırasında çerçeveyi büyütüyoruz */
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);  /* Gölge efekti */
     cursor: pointer;  /* Fare imlecini el simgesine çevirir */
+    background-color: #333333;
 }
 
         /* Sosyal Medya İkonları - Font Awesome */
