--- a/index.html
+++ b/index.html
@@ -200,16 +200,16 @@
         <h2>My Projects</h2>
 
         <div class="project-item">
-            <h3>Project 1</h3>
+            <h3>Gun Plus Fever!</h3>
             <video controls>
                 <source src="project1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="project-links">
-                <a href="https://play.google.com/store/apps/details?id=com.example.android">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.GunPlusFever&hl=en">
                     <img src="android-icon.png" alt="Android">
                 </a>
-                <a href="https://apps.apple.com/app/id0000000000">
+                <a href="https://apps.apple.com/tr/app/gun-plus-fever/id6449928628">
                     <img src="ios-icon.png" alt="iOS">
                 </a>
             </div>
