--- a/index.html
+++ b/index.html
@@ -216,16 +216,16 @@
         </div>
 
         <div class="project-item">
-            <h3>Project 2</h3>
+            <h3>Bottle Runner Gun</h3>
             <video controls>
                 <source src="project2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="project-links">
-                <a href="https://play.google.com/store/apps/details?id=com.example.android">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.BottleRunnerGun">
                     <img src="android-icon.png" alt="Android">
                 </a>
-                <a href="https://apps.apple.com/app/id0000000000">
+                <a href="https://apps.apple.com/us/app/bottle-runner-gun/id6453169545">
                     <img src="ios-icon.png" alt="iOS">
                 </a>
             </div>
