--- a/index.html
+++ b/index.html
@@ -244,6 +244,19 @@
             </div>
         </div>
 
+        <div class="project-item">
+            <h3>My Berry Farm</h3>
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyBerryFarm">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/ec/app/my-berry-farm/id6636528155?l=en-GB">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
+        </div>
+
     </section>
 
     <!-- Sosyal Medya İkonları -->
