--- a/index.html
+++ b/index.html
@@ -257,6 +257,32 @@
             </div>
         </div>
 
+        <div class="project-item">
+            <h3>Crowd Busters</h3>
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.CrowdBusters">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/ec/app/crowd-busters/id6459474589?l=en-GB">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <h3>Voxel Crusher Run</h3>
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.VoxelCrusherRun">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/us/app/voxel-crusher-run/id6447962131">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
+        </div>
+
     </section>
 
     <!-- Sosyal Medya İkonları -->
