--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
     <!-- Footer Bölümü -->
     <footer>
-        <p>&copy; 2024 Muhammet Mustafa HASTAOĞLUGİL</p>
+        <p>2024 Muhammet Mustafa HASTAOĞLUGİL</p>
     </footer>
 
 </body>
