--- a/index.html
+++ b/index.html
@@ -201,15 +201,12 @@
 
         <div class="project-item">
             <h3>Gun Plus Fever!</h3>
-            <video controls>
-                <source src="project1.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <iframe width="100%" height="225" src="https://youtu.be/wBJ8_EVu_iE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="project-links">
-                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.GunPlusFever&hl=en">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.VoxelCrusherRun">
                     <img src="android-icon.png" alt="Android">
                 </a>
-                <a href="https://apps.apple.com/tr/app/gun-plus-fever/id6449928628">
+                <a href="https://apps.apple.com/us/app/voxel-crusher-run/id6447962131">
                     <img src="ios-icon.png" alt="iOS">
                 </a>
             </div>
@@ -272,7 +269,7 @@
 
         <div class="project-item">
             <h3>Voxel Crusher Run</h3>
-            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="225" src="https://youtu.be/wBJ8_EVu_iE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="project-links">
                 <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.VoxelCrusherRun">
                     <img src="android-icon.png" alt="Android">
