--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
         <div class="project-item">
             <h3>Gun Plus Fever!</h3>
-            <iframe width="100%" height="225" src="https://youtu.be/embed/uhNxvZipnQ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="225" src="https://youtube.com/embed/uhNxvZipnQ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="project-links">
                 <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.VoxelCrusherRun">
                     <img src="android-icon.png" alt="Android">
