--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
             <h3>Gun Plus Fever!</h3>
             <iframe width="100%" height="225" src="https://youtube.com/embed/uhNxvZipnQ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="project-links">
-                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.VoxelCrusherRun">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.GunPlusFever&hl=en">
                     <img src="android-icon.png" alt="Android">
                 </a>
-                <a href="https://apps.apple.com/us/app/voxel-crusher-run/id6447962131">
+                <a href="https://apps.apple.com/tr/app/gun-plus-fever/id6449928628">
                     <img src="ios-icon.png" alt="iOS">
                 </a>
             </div>
