--- a/index.html
+++ b/index.html
@@ -192,7 +192,17 @@
     <section class="about">
         <h2>About Me</h2>
         <img src="profile.jpg" alt="Profile Picture" style="display: none;">
-        <p>Hello! I'm Muhammet Mustafa HASTAOĞLUGİL, a passionate computer engineer specializing in software development. I love building innovative projects and exploring new technologies.</p>
+        <p># Hi there, I'm Muhammet Mustafa HASTAOĞLUGİL! 👋
+
+I'm a passionate **Computer Engineer** with a strong interest in developing innovative solutions and learning new technologies. With a background in software development, I'm always eager to take on new challenges and contribute to impactful projects.
+
+## 🛠 Skills & Technologies
+- **Programming Languages:** Python, C#, Java, JavaScript, C
+- **Mobile Development:** Flutter, Android (Java)
+- **Game Development:** Unity, C#
+- **Database Management:** MySQL, Firebase
+- **Cloud Services:** Firebase, Google Cloud
+- **Version Control:** Git, GitHub, GitLab</p>
     </section>
 
     <!-- Projeler Bölümü -->
