--- a/index.html
+++ b/index.html
@@ -190,20 +190,21 @@
 
     <!-- Kendini Tanıtma Bölümü -->
     <section class="about">
-        <h2>About Me</h2>
-        <img src="profile.jpg" alt="Profile Picture" style="display: none;">
-        <p># Hi there, I'm Muhammet Mustafa HASTAOĞLUGİL! 👋
-
-I'm a passionate **Computer Engineer** with a strong interest in developing innovative solutions and learning new technologies. With a background in software development, I'm always eager to take on new challenges and contribute to impactful projects.
-
-## 🛠 Skills & Technologies
-- **Programming Languages:** Python, C#, Java, JavaScript, C
-- **Mobile Development:** Flutter, Android (Java)
-- **Game Development:** Unity, C#
-- **Database Management:** MySQL, Firebase
-- **Cloud Services:** Firebase, Google Cloud
-- **Version Control:** Git, GitHub, GitLab</p>
-    </section>
+    <h2>About Me</h2>
+    <img src="profile.jpg" alt="Profile Picture" style="display: none;">
+    <p>Hi there, I'm Muhammet Mustafa HASTAOĞLUGİL! 👋</p>
+    <p>I'm a passionate <strong>Computer Engineer</strong> with a strong interest in developing innovative solutions and learning new technologies. With a background in software development, I'm always eager to take on new challenges and contribute to impactful projects.</p>
+    
+    <h3>🛠 Skills & Technologies</h3>
+    <ul>
+        <li><strong>Programming Languages:</strong> Python, C#, Java, JavaScript, C</li>
+        <li><strong>Mobile Development:</strong> Flutter, Android (Java)</li>
+        <li><strong>Game Development:</strong> Unity, C#</li>
+        <li><strong>Database Management:</strong> MySQL, Firebase</li>
+        <li><strong>Cloud Services:</strong> Firebase, Google Cloud</li>
+        <li><strong>Version Control:</strong> Git, GitHub, GitLab</li>
+    </ul>
+</section>
 
     <!-- Projeler Bölümü -->
     <section class="projects">
