--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
             text-decoration: none;
             margin: 0 5px;
         }
+        ul {
+            list-style-type: none; /* Noktaları kaldırır */
+            padding-left: 0; /* İçerik sola hizalanır, ekstra boşluk kalmaz */
+          }
+
+        li {
+            margin-bottom: 10px; /* Maddeler arasında boşluk bırakır */
+          }
 
     </style>
 </head>
