--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Muhammet Mustafa HASTAOĞLUGİL Portfolio</title>
+    <title>Muhammet Mustafa HASTAOĞLUGİL Portfolio</title>æ
 
     <!-- Google Fonts - Montserrat -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -39,33 +39,31 @@
             font-size: 2.5em;
         }
 
-        /* Kendini Tanıtma Bölümü */
-        .about {
-            padding: 50px;
-            background-color: rgba(255, 255, 255, 0.8); /* Yarı saydam arka plan */
-            text-align: center;
-            border-radius: 15px;
-            margin: 20px;
-        }
+            /* Kendini Tanıtma Bölümü */
+    .about {
+    padding: 30px; /* Kenarlardan boşluğu azalt */
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    border-radius: 10px; /* Köşe yuvarlatmalarını biraz küçült */
+    margin: 15px;
+}
 
-        .about h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
+.about h2 {
+    font-size: 1.8em; /* Başlık boyutunu küçült */
+    margin-bottom: 15px; /* Başlık altı boşluğu azalt */
+}
 
-        .about p {
-            font-size: 1.2em;
-            color: #666;
-            margin-bottom: 40px;
-        }
+.about p {
+    font-size: 1em; /* Paragraf boyutunu küçült */
+    color: #666;
+    margin-bottom: 20px; /* Alt boşluğu azalt */
+}
 
-        .about img {
-            border-radius: 50%;
-            width: 200px;
-            height: 200px;
-            object-fit: cover;
-            border: 5px solid #333;
-        }
+.about img {
+    width: 150px; /* Resim boyutunu küçült */
+    height: 150px;
+    border: 4px solid #333; /* Çerçeve kalınlığını azalt */
+}
 
         /* Projeler Bölümü */
         .projects {
