--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,20 +14,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <style>
-        /* Temel stil düzenlemeleri */
+        /* Basic style adjustments */
         body {
             font-family: 'Montserrat', sans-serif;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            background-image: url('background-image.jpg'); /* Arka plan resmi */
+            background-image: url('background-image.jpg');
+            /* Background image */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
             background-repeat: no-repeat;
         }
 
-        /* Header için Gradient ve Yazı Tipi */
+        /* Header gradient and font styling */
         header {
             background: linear-gradient(45deg, #333, #444, #555);
             color: white;
@@ -39,37 +41,46 @@
             font-size: 2.5em;
         }
 
-            /* Kendini Tanıtma Bölümü */
-    .about {
-    padding: 30px; /* Kenarlardan boşluğu azalt */
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    border-radius: 10px; /* Köşe yuvarlatmalarını biraz küçült */
-    margin: 15px;
-}
+        /* Self-introduction section */
+        .about {
+            padding: 30px;
+            /* Reduce margin around edges */
+            background-color: rgba(255, 255, 255, 0.8);
+            text-align: center;
+            border-radius: 10px;
+            /* Slightly smaller corner rounding */
+            margin: 15px;
+        }
 
-.about h2 {
-    font-size: 1.8em; /* Başlık boyutunu küçült */
-    margin-bottom: 15px; /* Başlık altı boşluğu azalt */
-}
+        .about h2 {
+            font-size: 1.8em;
+            /* Smaller heading size */
+            margin-bottom: 15px;
+            /* Reduce space below the heading */
+        }
 
-.about p {
-    font-size: 1em; /* Paragraf boyutunu küçült */
-    color: #666;
-    margin-bottom: 20px; /* Alt boşluğu azalt */
-}
+        .about p {
+            font-size: 1em;
+            /* Smaller paragraph size */
+            color: #666;
+            margin-bottom: 20px;
+            /* Reduce space below */
+        }
 
-.about img {
-    width: 150px; /* Resim boyutunu küçült */
-    height: 150px;
-    border: 4px solid #333; /* Çerçeve kalınlığını azalt */
-}
+        .about img {
+            width: 150px;
+            /* Smaller image size */
+            height: 150px;
+            border: 4px solid #333;
+            /* Thinner border */
+        }
 
-        /* Projeler Bölümü */
+        /* Projects section */
         .projects {
             padding: 50px;
             text-align: center;
-            background-color: rgba(255, 255, 255, 0.8); /* Yarı saydam arka plan */
+            background-color: rgba(255, 255, 255, 0.8);
+            /* Semi-transparent background */
             border-radius: 15px;
             margin: 20px;
         }
@@ -79,7 +90,7 @@
             margin-bottom: 30px;
         }
 
-        /* Proje Kartları */
+        /* Project cards */
         .project-item {
             display: inline-block;
             width: 400px;
@@ -93,7 +104,7 @@
             transition: all 0.5s ease;
         }
 
-        /* Hover Efekti */
+        /* Hover effect */
         .project-item:hover {
             transform: scale(1.1);
             background-color: #fff;
@@ -101,47 +112,61 @@
             box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
         }
 
-        /* Proje Video ve Thumbnail */
-        .project-item video, .project-item iframe {
+        /* Project video and thumbnail */
+        .project-item video,
+        .project-item iframe {
             width: 100%;
             height: 225px;
             border-radius: 8px;
         }
 
-        /* Proje İkonları */
+        /* Project icons */
         .project-links {
             margin-top: 15px;
             display: flex;
             justify-content: center;
         }
 
- .project-links a {
-    display: inline-block;
-    width: 120px;  /* Sabit genişlik */
-    height: 120px; /* Sabit yükseklik */
-    background-color: transparent;  /* Çerçeve arka planı şeffaf */
-    text-align: center;  /* İkonu ortalayacağız */
-    vertical-align: middle;
-    line-height: 120px;  /* Yükseklik kadar line-height vererek dikey ortalama yapıyoruz */
-    border-radius: 10px;  /* Yuvarlak köşeler */
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;  /* Smooth geçiş efekti */
-     margin: 20px;
-}
+        .project-links a {
+            display: inline-block;
+            width: 120px;
+            /* Fixed width */
+            height: 120px;
+            /* Fixed height */
+            background-color: transparent;
+            /* Transparent background */
+            text-align: center;
+            /* Center the icon */
+            vertical-align: middle;
+            line-height: 120px;
+            /* Vertically center by setting line height equal to height */
+            border-radius: 10px;
+            /* Rounded corners */
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            /* Smooth transition effect */
+            margin: 20px;
+        }
 
-.project-links img {
-    max-width: 80px;  /* İkon genişliğini max 80px yapıyoruz */
-    max-height: 80px; /* İkon yüksekliğini max 80px yapıyoruz */
-    vertical-align: middle;  /* İkonu ortalıyoruz */
-}
+        .project-links img {
+            max-width: 80px;
+            /* Max icon width of 80px */
+            max-height: 80px;
+            /* Max icon height of 80px */
+            vertical-align: middle;
+            /* Center icon */
+        }
 
-.project-links a:hover {
-    transform: scale(1.1);  /* Hover sırasında çerçeveyi büyütüyoruz */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);  /* Gölge efekti */
-    cursor: pointer;  /* Fare imlecini el simgesine çevirir */
-    background-color: #333333;
-}
+        .project-links a:hover {
+            transform: scale(1.1);
+            /* Scale the frame on hover */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            /* Shadow effect */
+            cursor: pointer;
+            /* Change cursor to pointer on hover */
+            background-color: #333333;
+        }
 
-        /* Sosyal Medya İkonları - Font Awesome */
+        /* Social media icons - Font Awesome */
         .social-icons {
             text-align: center;
             padding: 20px 0;
@@ -158,7 +183,7 @@
             color: #3498db;
         }
 
-        /* Footer Bölümü */
+        /* Footer section */
         footer {
             text-align: center;
             padding: 20px;
@@ -176,49 +201,57 @@
             text-decoration: none;
             margin: 0 5px;
         }
+
         ul {
-            list-style-type: none; /* Noktaları kaldırır */
-            padding-left: 0; /* İçerik sola hizalanır, ekstra boşluk kalmaz */
-          }
+            list-style-type: none;
+            /* Remove bullet points */
+            padding-left: 0;
+            /* Align content to left without extra space */
+        }
 
         li {
-            margin-bottom: 10px; /* Maddeler arasında boşluk bırakır */
-          }
-
+            margin-bottom: 10px;
+            /* Add spacing between items */
+        }
     </style>
 </head>
+
 <body>
 
-    <!-- Header Bölümü -->
+    <!-- Header Section -->
     <header>
         <h1>Muhammet Mustafa HASTAOĞLUGİL Portfolio</h1>
     </header>
 
-    <!-- Kendini Tanıtma Bölümü -->
+    <!-- Self Introduction Section -->
     <section class="about">
-    <h2>About Me</h2>
-    <img src="profile.jpg" alt="Profile Picture" style="display: none;">
-    <p>Hi there, I'm Muhammet Mustafa HASTAOĞLUGİL! 👋</p>
-    <p>I'm a passionate <strong>Computer Engineer</strong> with a strong interest in developing innovative solutions and learning new technologies. With a background in software development, I'm always eager to take on new challenges and contribute to impactful projects.</p>
-    
-    <h3>🛠 Skills & Technologies</h3>
-    <ul>
-        <li><strong>Programming Languages:</strong> Python, C#, Java, JavaScript, C</li>
-        <li><strong>Mobile Development:</strong> Flutter, Android (Java)</li>
-        <li><strong>Game Development:</strong> Unity, C#</li>
-        <li><strong>Database Management:</strong> MySQL, Firebase</li>
-        <li><strong>Cloud Services:</strong> Firebase, Google Cloud</li>
-        <li><strong>Version Control:</strong> Git, GitHub, GitLab</li>
-    </ul>
-</section>
+        <h2>About Me</h2>
+        <img src="profile.jpg" alt="Profile Picture" style="display: none;">
+        <p>Hi there, I'm Muhammet Mustafa HASTAOĞLUGİL! 👋</p>
+        <p>I'm a passionate <strong>Computer Engineer</strong> with a strong interest in developing innovative solutions
+            and learning new technologies. With a background in software development, I'm always eager to take on new
+            challenges and contribute to impactful projects.</p>
 
-    <!-- Projeler Bölümü -->
+        <h3>🛠 Skills & Technologies</h3>
+        <ul>
+            <li><strong>Programming Languages:</strong> Python, C#, Java, JavaScript, C</li>
+            <li><strong>Mobile Development:</strong> Flutter, Android (Java)</li>
+            <li><strong>Game Development:</strong> Unity, C#</li>
+            <li><strong>Database Management:</strong> MySQL, Firebase</li>
+            <li><strong>Cloud Services:</strong> Firebase, Google Cloud</li>
+            <li><strong>Version Control:</strong> Git, GitHub, GitLab</li>
+        </ul>
+    </section>
+
+    <!-- Projects Section -->
     <section class="projects">
         <h2>My Projects</h2>
 
         <div class="project-item">
             <h3>Gun Plus Fever!</h3>
-            <iframe width="100%" height="225" src="https://youtube.com/embed/uhNxvZipnQ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="225" src="https://youtube.com/embed/uhNxvZipnQ8" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <div class="project-links">
                 <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.GunPlusFever&hl=en">
                     <img src="android-icon.png" alt="Android">
@@ -246,70 +279,4 @@
         </div>
 
         <div class="project-item">
-            <h3>My Tasty Empire</h3>
-            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="project-links">
-                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyTastyEmpire&hl=en">
-                    <img src="android-icon.png" alt="Android">
-                </a>
-                <a href="https://apps.apple.com/us/app/my-tasty-empire/id6502766369">
-                    <img src="ios-icon.png" alt="iOS">
-                </a>
-            </div>
-        </div>
-
-        <div class="project-item">
-            <h3>My Berry Farm</h3>
-            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="project-links">
-                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyBerryFarm">
-                    <img src="android-icon.png" alt="Android">
-                </a>
-                <a href="https://apps.apple.com/ec/app/my-berry-farm/id6636528155?l=en-GB">
-                    <img src="ios-icon.png" alt="iOS">
-                </a>
-            </div>
-        </div>
-
-        <div class="project-item">
-            <h3>Crowd Busters</h3>
-            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="project-links">
-                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.CrowdBusters">
-                    <img src="android-icon.png" alt="Android">
-                </a>
-                <a href="https://apps.apple.com/ec/app/crowd-busters/id6459474589?l=en-GB">
-                    <img src="ios-icon.png" alt="iOS">
-                </a>
-            </div>
-        </div>
-
-        <div class="project-item">
-            <h3>Voxel Crusher Run</h3>
-            <iframe width="100%" height="225" src="https://youtu.be/wBJ8_EVu_iE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="project-links">
-                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.VoxelCrusherRun">
-                    <img src="android-icon.png" alt="Android">
-                </a>
-                <a href="https://apps.apple.com/us/app/voxel-crusher-run/id6447962131">
-                    <img src="ios-icon.png" alt="iOS">
-                </a>
-            </div>
-        </div>
-
-    </section>
-
-    <!-- Sosyal Medya İkonları -->
-    <div class="social-icons">
-        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
-    </div>
-
-    <!-- Footer Bölümü -->
-    <footer>
-        <p>2024 Muhammet Mustafa HASTAOĞLUGİL</p>
-    </footer>
-
-</body>
-</html>
+            <h3
