--- a/index.html
+++ b/index.html
@@ -279,4 +279,79 @@
         </div>
 
         <div class="project-item">
-            <h3
+            <h3>My Tasty Empire</h3>
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyTastyEmpire&hl=en">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/us/app/my-tasty-empire/id6502766369">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <h3>My Berry Farm</h3>
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyBerryFarm">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/ec/app/my-berry-farm/id6636528155?l=en-GB">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <h3>Crowd Busters</h3>
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/KYoJAuQ7C14" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.CrowdBusters">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/ec/app/crowd-busters/id6459474589?l=en-GB">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <h3>Voxel Crusher Run</h3>
+            <iframe width="100%" height="225" src="https://youtu.be/wBJ8_EVu_iE" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.VoxelCrusherRun">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/us/app/voxel-crusher-run/id6447962131">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Social Media Icons -->
+    <div class="social-icons">
+        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>2024 Muhammet Mustafa HASTAOĞLUGİL</p>
+    </footer>
+
+</body>
+
+</html>
