--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
         <div class="project-item">
             <h3>My Tasty Empire</h3>
-            <iframe width="100%" height="225" src="https://youtube.com/xwZl2fbaeZI/embed/KYoJAuQ7C14" frameborder="0"
+            <iframe width="100%" height="225" src="https://www.youtube.com/watch?v=xwZl2fbaeZI/embed/KYoJAuQ7C14" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <div class="project-links">
