--- a/index.html
+++ b/index.html
@@ -164,17 +164,19 @@
     <h2>My Projects</h2>
 
     <div class="project-item">
-      <h3>Gun Plus Fever!</h3>
-      <iframe src="https://youtube.com/embed/uhNxvZipnQ8" allowfullscreen></iframe>
-      <div class="project-links">
-        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.GunPlusFever&hl=en">
-          <img src="android-icon.png" alt="Android">
-        </a>
-        <a href="https://apps.apple.com/tr/app/gun-plus-fever/id6449928628">
-          <img src="ios-icon.png" alt="iOS">
-        </a>
-      </div>
-    </div>
+            <h3>Gun Plus Fever!</h3>
+            <iframe width="100%" height="225" src="https://youtube.com/embed/uhNxvZipnQ8" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.GunPlusFever&hl=en">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/tr/app/gun-plus-fever/id6449928628">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
+        </div>
 
     <div class="project-item">
       <h3>Bottle Runner Gun</h3>
