--- a/index.html
+++ b/index.html
@@ -179,19 +179,20 @@
         </div>
 
     <div class="project-item">
-      <h3>Bottle Runner Gun</h3>
-      <video controls>
-        <source src="project2.mp4" type="video/mp4">
-      </video>
-      <div class="project-links">
-        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.BottleRunnerGun">
-          <img src="android-icon.png" alt="Android">
-        </a>
-        <a href="https://apps.apple.com/us/app/bottle-runner-gun/id6453169545">
-          <img src="ios-icon.png" alt="iOS">
-        </a>
-      </div>
-    </div>
+            <h3>Bottle Runner Gun</h3>
+            <video controls>
+                <source src="project2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <div class="project-links">
+                <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.BottleRunnerGun">
+                    <img src="android-icon.png" alt="Android">
+                </a>
+                <a href="https://apps.apple.com/us/app/bottle-runner-gun/id6453169545">
+                    <img src="ios-icon.png" alt="iOS">
+                </a>
+            </div>
+        </div>
 
     <div class="project-item">
       <h3>My Tasty Empire</h3>
