--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!-- Three.js Kütüphanesi -->
   <script src="three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 
   <style>
     #bg {
