DevOps:Video push in project

--- a/index.html
+++ b/index.html
@@ -180,12 +180,11 @@
             </div>
         </div>
 
-        <div class="project-item">
+         <div class="project-item">
             <h3>Bottle Runner Gun</h3>
-            <video controls>
-                <source src="project2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <iframe width="100%" height="225" src="https://youtube.com/shorts/NyJEd7xxyP4?feature=share" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <div class="project-links">
                 <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.BottleRunnerGun">
                     <img src="android-icon.png" alt="Android">
