DevOPs:Videos added in project

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
          <div class="project-item">
             <h3>Bottle Runner Gun</h3>
-            <iframe width="100%" height="225" src="https://youtube.com/shorts/NyJEd7xxyP4?feature=share" frameborder="0"
+            <iframe width="100%" height="225" src="https://youtube.com/embed/NyJEd7xxyP4?feature=share" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <div class="project-links">
