DevOps:Bugs update in project

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
         <div class="project-item">
             <h3>Try Higher</h3>
-            <iframe src="https://youtube.com/embedß/VgujLQnEcbY?feature=share" allowfullscreen></iframe>
+            <iframe src="https://youtube.com/embed/VgujLQnEcbY?feature=share" allowfullscreen></iframe>
             <div class="project-links">
                 <a href="https://apps.apple.com/us/app/try-higher/id1626437505">
                     <img src="ios-icon.png" alt="iOS">
@@ -323,7 +323,7 @@
 
          <div class="project-item">
             <h3>Join the Team</h3>
-            <iframe src="https://youtube.com/shorts/Un-EgWZGRm8?feature=share" allowfullscreen></iframe>
+            <iframe src="https://youtube.com/embed/Un-EgWZGRm8?feature=share" allowfullscreen></iframe>
             <div class="project-links">
                 <a href="https://apps.apple.com/tr/app/join-the-team/id1613534259?l=tr">
                     <img src="ios-icon.png" alt="iOS">
@@ -353,7 +353,7 @@
 
         <div class="project-item">
             <h3>Throw'n Spin</h3>
-            <iframe src="https://youtube.com/shorts/TF_Ip3898Bs?feature=share" allowfullscreen></iframe>
+            <iframe src="https://youtube.com/embed/TF_Ip3898Bs?feature=share" allowfullscreen></iframe>
             <div class="project-links">
                 <a href="https://apps.apple.com/us/app/thrown-spin/id6443603710">
                     <img src="ios-icon.png" alt="iOS">
